# mutlass

./: CHANGELOG.md  CMakeLists.txt  MUSA.cmake  README.md  README_CN.md
cmake/: googletest.cmake  version_extended.h.in
examples/: CMakeLists.txt
examples/00_basic_gemm/: CMakeLists.txt  basic_gemm.mu
examples/01_quyuan_gemm_with_collective_builder/: CMakeLists.txt  collective_builder.mu
examples/02_mp31_fp8_gemm_with_collective_builder/: CMakeLists.txt  mp31_fp8_gemm.mu
examples/03_mp31_fp8_scaling_gemm/: CMakeLists.txt  README.md  fp8_scaling_gemm.mu
examples/03_mp31_fp8_scaling_gemm/reference/host/: gemm_with_groupwise_scaling.hpp
examples/common/: gather_tensor.hpp  helper.h
experimental/: CMakeLists.txt  README.md
experimental/fmha/: CMakeLists.txt  fmha_fwd.mu  fmha_options.hpp  mla.mu  paged_fmha_fwd.mu
experimental/fmha/collective/: fmha_collective_epilogue.hpp  fmha_collective_load.hpp  fmha_collective_pipeline.hpp  fmha_collective_softmax.hpp  fmha_collective_tme_warpspecialized.hpp  fmha_common.hpp  fmha_fusion.hpp  fmha_load_primitive_builder.hpp  fmha_mla_collective_tme_warpspecialized.hpp  fmha_paged_collective_tme_warpspecialized.hpp
experimental/fmha/kernel/: fmha_kernel_tme_warpspecialzed.hpp  fmha_paged_kernel_tme_warpspecialzed.hpp  fmha_tile_scheduler.hpp  mla_kernel_tme_warpspecialzed.hpp
experimental/mp31_flash_attention_fwd/: CMakeLists.txt  flash_attention.mu  flash_attn_fwd.hpp  fwd_params.hpp  kernel_traits.hpp  online_softmax.hpp  reference_attention.hpp
include/mute/: address_space.hpp  config.hpp  int_tuple.hpp  layout.hpp  layout_composed.hpp  pointer.hpp  pointer_base.hpp  pointer_flagged.hpp  pointer_sparse.hpp  pointer_swizzle.hpp  stride.hpp  swizzle.hpp  swizzle_layout.hpp  tensor.hpp  tensor_impl.hpp  tensor_predicate.hpp  tensor_zip.hpp  tile.hpp  underscore.hpp
include/mute/algorithm/: axpby.hpp  clear.hpp  cooperative_copy.hpp  cooperative_gemm.hpp  copy.hpp  fill.hpp  functional.hpp  gemm.hpp  prefer.hpp  prefetch.hpp  tensor_algorithms.hpp  tuple_algorithms.hpp
include/mute/arch/: copy.hpp  copy_mp31.hpp  copy_mp31_desc.hpp  copy_mp31_tme.hpp  mma.hpp  mma_mp22.hpp  mma_mp31.hpp  mma_mp31_desc.hpp  mma_mp31_sqmma.hpp  simd_mp31.hpp  tce_desc.hpp  util.hpp
include/mute/atom/: copy_atom.hpp  copy_traits.hpp  copy_traits_mp31.hpp  copy_traits_mp31_im2col.hpp  copy_traits_mp31_tme.hpp  copy_traits_mp31_tme_swizzle.hpp  mma_atom.hpp  mma_traits.hpp  mma_traits_mp22.hpp  mma_traits_mp31.hpp  mma_traits_mp31_sqmma.hpp
include/mute/container/: alignment.hpp  array.hpp  array_aligned.hpp  array_subbyte.hpp  bit_field.hpp  musa_types.hpp  tuple.hpp  type_list.hpp
include/mute/numeric/: arithmetic_tuple.hpp  bfloat.hpp  complex.hpp  float8.hpp  half.hpp  int.hpp  integer_sequence.hpp  integer_subbyte.hpp  integral_constant.hpp  integral_ratio.hpp  math.hpp  numeric_types.hpp  real.hpp  tfloat.hpp  uint128.hpp
include/mute/util/: debug.hpp  print.hpp  type_traits.hpp
include/mutlass/: aligned_buffer.h  array.h  array_planar_complex.h  array_subbyte.h  bfloat16.h  blas3.h  blas3_types.h  complex.h  constants.h  coord.h  core_io.h  device_kernel.h  fast_math.h  float8.h  floating_point_mtrtc.h  functional.h  gemm_coord.h  gemm_coord.hpp  half.h  integer_subbyte.h  kernel_hardware_info.h  kernel_hardware_info.hpp  kernel_launch.h  matrix.h  matrix_coord.h  matrix_shape.h  musa_host_adapter.hpp  mutlass.h  numeric_conversion.h  numeric_size.h  numeric_types.h  pitch_linear_coord.h  predicate_vector.h  quaternion.h  real.h  relatively_equal.h  subbyte_reference.h  tensor_coord.h  tensor_ref.h  tensor_ref_planar_complex.h  (+7 more)
include/mutlass/arch/: arch.h  barrier.hpp  cache_operation.h  memory.h  mma.h  simd.h
include/mutlass/conv/: conv2d_problem_size.h  conv3d_problem_size.h  convolution.h
include/mutlass/detail/: collective.hpp  dependent_false.hpp  helper_macros.hpp  layout.hpp  mainloop_fusion_helper_scale_factor.hpp  mma.hpp
include/mutlass/epilogue/: dispatch_policy.hpp
include/mutlass/epilogue/collective/: collective_builder.hpp  collective_epilogue.hpp  default_epilogue.hpp  detail.hpp  epilogue_tensor_broadcast.hpp  mp22_epilogue_evt.hpp  mp22_epilogue_vectorized.hpp  mp31_epilogue_tme.hpp
include/mutlass/epilogue/fusion/: callbacks.hpp  operations.hpp
include/mutlass/epilogue/thread/: activation.h  linear_combination.h  linear_combination_params.h  scale_type.h
include/mutlass/gemm/: dispatch_policy.hpp  gemm.h  gemm_enumerated_types.h
include/mutlass/gemm/collective/: collective_builder.hpp  collective_mma.hpp  mp22_mma_twostage.hpp  mp31_mma_tme_sqmma_ss.hpp  mp31_mma_tme_sqmma_ss_scaling.hpp  mp31_mma_tme_sqmma_ss_warpspecialized.hpp  mp31_mma_tme_sqmma_ss_warpspecialized_scaling.hpp  scaling_accumulation.hpp
include/mutlass/gemm/device/: gemm_universal_adapter.h
include/mutlass/gemm/kernel/: gemm_universal.hpp  mp22_gemm.hpp  mp31_gemm_tme.hpp  mp31_gemm_tme_warpspecialized.hpp  persistent_tile_scheduler.hpp  static_tile_scheduler.hpp  tile_scheduler.hpp  tile_scheduler_params.hpp
include/mutlass/gemm/threadblock/: threadblock_swizzle.h
include/mutlass/layout/: layout.h  matrix.h  permute.h  pitch_linear.h  tensor.h  vector.h
include/mutlass/pipeline/: mp31_pipeline.hpp  pipeline.hpp
include/mutlass/platform/: platform.h
include/mutlass/transform/thread/: transpose.h  (+1 more)
media/docs/: quickstart.md
python/: setup_library.py
python/mutlass_library/: __init__.py  gemm_operation.py  generator.py  library.py  manifest.py
test/: CMakeLists.txt
test/unit/: CMakeLists.txt  test_unit.cpp
test/unit/common/: filter_architecture.cpp  mma_inst_rr_test.hpp  mutlass_unit_test.h
test/unit/gemm/: CMakeLists.txt
test/unit/mute/: CMakeLists.txt
tools/: CMakeLists.txt
tools/profiler/: CMakeLists.txt
tools/profiler/src/: device_allocation.mu  device_context.mu  enumerated_types.cpp  gemm_operation_profiler.mu  gpu_timer.cpp  main.cpp  mutlass_profiler.mu  operation_profiler.mu  options.mu  performance_report.cpp  performance_result.mu  problem_space.cpp
tools/util/: CMakeLists.txt
(+127 files in other folders)
